# render_rcdock

./: .gitignore  README.md  pyproject.toml
api/: definitions.yaml
client/: package.json  webpack.config.js
client/src/: index.jsx
client/src/rcdock/: docklayout.tsx
render_rcdock/: _auto.py  components.py  definitions.py  utils.py
render_rcdock/client/: package-lock.json  package.json
render_rcdock/client/src/: index.jsx
