[tool.poetry]
name = "render-rcdock"
version = "0.1.0"
description = "Render binding for rc-dock (https://github.com/ticlo/rc-dock)"
authors = ["fdv1 <francois@pytek.io>"]
readme = "README.md"
packages = [{include = "render_rcdock"}]
include = [{path = "render_rcdock/js/*.*"}]
exclude = ["render_rcdock/client", ".python-version"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
